--- a/01/01_day/01/01_day.vcxproj
+++ b/01/01_day/01/01_day.vcxproj
@@ -24,6 +24,7 @@
     <ProjectGuid>{ec4fcf91-f5dc-4081-a6cc-140e82ae89da}</ProjectGuid>
     <RootNamespace>My01day</RootNamespace>
     <WindowsTargetPlatformVersion>10.0</WindowsTargetPlatformVersion>
+    <ProjectName>01</ProjectName>
   </PropertyGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.Default.props" />
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'" Label="Configuration">
