--- a/01/01_day/04/04.vcxproj
+++ b/01/01_day/04/04.vcxproj
@@ -19,7 +19,7 @@
     </ProjectConfiguration>
   </ItemGroup>
   <ItemGroup>
-    <ClCompile Include="07_栈区分析.c" />
+    <ClCompile Include="08_堆区分析.c" />
   </ItemGroup>
   <PropertyGroup Label="Globals">
     <VCProjectVersion>16.0</VCProjectVersion>
