--- a/01/01_day/04/04.vcxproj.filters
+++ b/01/01_day/04/04.vcxproj.filters
@@ -15,7 +15,7 @@
     </Filter>
   </ItemGroup>
   <ItemGroup>
-    <ClCompile Include="07_栈区分析.c">
+    <ClCompile Include="08_堆区分析.c">
       <Filter>源文件</Filter>
     </ClCompile>
   </ItemGroup>
